Fixed Hight Contrast color issue.

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Default.css
@@ -259,4 +259,8 @@ fieldset.TableLike > .Row > label {
     border-left: 15px solid blue;
 }
 
+.AlreadyDisabled div.InputField_Selection div.Text {
+    background: #adadad;
+}
+
 } /* end @media */
